--- a/index.html
+++ b/index.html
@@ -8,38 +8,52 @@
     <meta name="description" content="Portfolio of Afnan A., a Data Analyst and Data Scientist showcasing projects and skills.">
     <meta name="keywords" content="Data Science, Data Analysis, Machine Learning, Afnan A. Portfolio">
     <meta name="author" content="Afnan A.">
-    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Owl Carousel CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <!-- Custom CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Afnan A.</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <!-- Sidebar Navigation -->
+    <div class="sidebar">
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link" href="#home">
+                    <span class="nav-icon">&#9679;</span>
+                    <span class="nav-text">Home</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#about">
+                    <span class="nav-icon">&#9679;</span>
+                    <span class="nav-text">About</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#projects">
+                    <span class="nav-icon">&#9679;</span>
+                    <span class="nav-text">Projects</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#skills">
+                    <span class="nav-icon">&#9679;</span>
+                    <span class="nav-text">Skills</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">
+                    <span class="nav-icon">&#9679;</span>
+                    <span class="nav-text">Contact</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 
     <!-- Hero Header Section -->
-    <header id="home" class="hero-header d-flex align-items-center text-white" style="background-image: url('images/hero-background.jpg');">
+    <header id="home" class="hero-header d-flex align-items-center text-white">
         <div class="container text-center">
             <h1 class="display-4">Welcome to My Portfolio</h1>
             <p class="lead">Data Analyst / Data Scientist</p>
@@ -47,17 +61,17 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="py-5 page-section bg-light">
+    <section id="about" class="py-5 page-section">
         <div class="container text-center">
             <h2 class="mb-4">About</h2>
-            <img src="Profile%20Pic.jpg" alt="Profile Picture" class="profile-picture mb-3" style="width: 150px; height: 150px;">
+            <img src="Profile_Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
             <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
             <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
         </div>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="py-5 page-section bg-secondary text-white">
+    <section id="projects" class="py-5 bg-light page-section">
         <div class="container text-center">
             <h2 class="mb-4">Projects</h2>
             <div class="owl-carousel custom-carousel owl-theme">
@@ -69,13 +83,52 @@
                         <a href="#" class="btn btn-outline-secondary">Source Code</a>
                     </div>
                 </div>
-                <!-- Additional items... -->
+                <div class="item" style="background-image: url('images/healthcare2.jpg');">
+                    <div class="item-desc">
+                        <h3>Healthcare Project 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Blog Post</a>
+                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/finance1.jpg');">
+                    <div class="item-desc">
+                        <h3>Finance Project 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Blog Post</a>
+                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/finance2.jpg');">
+                    <div class="item-desc">
+                        <h3>Finance Project 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Blog Post</a>
+                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/energy1.jpg');">
+                    <div class="item-desc">
+                        <h3>Energy Project 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Blog Post</a>
+                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/energy2.jpg');">
+                    <div class="item-desc">
+                        <h3>Energy Project 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Blog Post</a>
+                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="py-5 page-section bg-light">
+    <section id="skills" class="py-5 page-section">
         <div class="container text-center">
             <h2 class="mb-4">Skills</h2>
             <div class="owl-carousel custom-carousel owl-theme">
@@ -86,7 +139,41 @@
                         <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                     </div>
                 </div>
-                <!-- Additional items... -->
+                <div class="item" style="background-image: url('images/skills2.jpg');">
+                    <div class="item-desc">
+                        <h3>Data Visualization</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/skills3.jpg');">
+                    <div class="item-desc">
+                        <h3>SQL</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/skills4.jpg');">
+                    <div class="item-desc">
+                        <h3>Data Storytelling</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/skills5.jpg');">
+                    <div class="item-desc">
+                        <h3>Programming</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('images/skills6.jpg');">
+                    <div class="item-desc">
+                        <h3>Networking</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -97,26 +184,26 @@
             <h2 class="mb-4">Contact Me</h2>
             <div class="row justify-content-center mb-4">
                 <div class="col-md-6">
-                    <p><i class="fas fa-envelope text-success"></i> afnan.abdullahi375@gmail.com</p>
-                    <p><i class="fas fa-phone-alt text-success"></i> +1 (612) 461-6083</p>
+                    <p><i class="fas fa-envelope text-dark-green"></i> afnan.abdullahi375@gmail.com</p>
+                    <p><i class="fas fa-phone-alt text-dark-green"></i> +1 (612) 461-6083</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 d-flex justify-content-around">
                     <a href="https://www.linkedin.com/in/afnanabdullahi/" target="_blank" class="text-white" title="LinkedIn">
-                        <i class="fab fa-linkedin fa-2x text-success"></i>
+                        <i class="fab fa-linkedin fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://github.com/AfnanAbdullahi" target="_blank" class="text-white" title="GitHub">
-                        <i class="fab fa-github fa-2x text-success"></i>
+                        <i class="fab fa-github fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://twitter.com" target="_blank" class="text-white" title="Twitter">
-                        <i class="fab fa-twitter fa-2x text-success"></i>
+                        <i class="fab fa-twitter fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://medium.com" target="_blank" class="text-white" title="Medium">
-                        <i class="fab fa-medium fa-2x text-success"></i>
+                        <i class="fab fa-medium fa-2x text-dark-green"></i>
                     </a>
                     <a href="https://youtube.com" target="_blank" class="text-white" title="YouTube">
-                        <i class="fab fa-youtube fa-2x text-success"></i>
+                        <i class="fab fa-youtube fa-2x text-dark-green"></i>
                     </a>
                 </div>
             </div>
@@ -130,27 +217,27 @@
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
     <script>
+        // Smooth scrolling for navigation links
         $(document).ready(function () {
-            // Smooth scrolling for navigation links
             $("a.nav-link").on('click', function (event) {
                 if (this.hash !== "") {
                     event.preventDefault();
                     var hash = this.hash;
                     $('html, body').animate({
-                        scrollTop: $(hash).offset().top - $('.navbar').outerHeight()
+                        scrollTop: $(hash).offset().top - $('.sidebar').outerHeight() // Adjust offset for fixed sidebar
                     }, 800);
                 }
             });
 
-            // Highlight the active section in the navbar
+            // Highlight the active section in the sidebar
             $(window).on('scroll', function () {
                 var scrollDistance = $(window).scrollTop();
                 $('.page-section').each(function (i) {
-                    if ($(this).position().top <= scrollDistance + $('.navbar').outerHeight()) {
-                        $('.navbar-nav a.nav-link.active').removeClass('active');
-                        $('.navbar-nav a.nav-link').eq(i).addClass('active');
+                    if ($(this).position().top <= scrollDistance + $('.sidebar').outerHeight()) {
+                        $('.sidebar .nav-link.active').removeClass('active');
+                        $('.sidebar .nav-link').eq(i).addClass('active');
                     }
                 });
             }).scroll();
