--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link" href="#home">
-                    <span class="nav-icon">&#9679;</span>
+                    <i class="fas fa-home nav-icon"></i>
                     <span class="nav-text">Home</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#about">
-                    <span class="nav-icon">&#9679;</span>
+                    <i class="fas fa-user nav-icon"></i>
                     <span class="nav-text">About</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#projects">
-                    <span class="nav-icon">&#9679;</span>
+                    <i class="fas fa-briefcase nav-icon"></i>
                     <span class="nav-text">Projects</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#skills">
-                    <span class="nav-icon">&#9679;</span>
+                    <i class="fas fa-chart-line nav-icon"></i>
                     <span class="nav-text">Skills</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#contact">
-                    <span class="nav-icon">&#9679;</span>
+                    <i class="fas fa-envelope nav-icon"></i>
                     <span class="nav-text">Contact</span>
                 </a>
             </li>
@@ -182,7 +182,7 @@
     <section id="contact" class="py-5 bg-dark text-white page-section">
         <div class="container text-center">
             <h2 class="mb-4">Contact Me</h2>
-            <div class="row justify-content-center mb-4">
+        <div class="row justify-content-center mb-4">
                 <div class="col-md-6">
                     <p><i class="fas fa-envelope text-dark-green"></i> afnan.abdullahi375@gmail.com</p>
                     <p><i class="fas fa-phone-alt text-dark-green"></i> +1 (612) 461-6083</p>
