--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
     <!-- Dynamic Fading Header -->
     <header class="dynamic-header">
         <div class="logo-container">
-            <img src="Profile%20Pic.jpg" alt="Profile Picture" class="logo">
-            <h1>Afnan Abdullahi</h1>
+            <img src="Profile_Pic.jpg" alt="Profile Picture" class="logo"> <!-- Ensure this path is correct -->
+            <h1>Afnan's Portfolio</h1>
         </div>
         <p id="greeting" class="greeting-message"></p>
-        <div class="utility-icons">
-            <a href="#contact" title="Contact"><img src="https://via.placeholder.com/20" alt="Contact"></a>
-            <a href="#" title="Search"><img src="https://via.placeholder.com/20" alt="Search"></a>
-        </div>
     </header>
 
     <!-- Vertical Navigation Bar -->
@@ -83,7 +79,6 @@
                     <img src="https://img.icons8.com/color/96/000000/artificial-intelligence.png" alt="Machine Learning">
                     <p>Machine Learning</p>
                 </div>
-                <!-- Add more skill items as needed -->
             </div>
             <div class="slide-bar">
                 <button class="prev-btn">‹</button>
@@ -129,10 +124,10 @@
                     <img src="https://img.icons8.com/ios-glyphs/30/4CAF50/linkedin.png" alt="LinkedIn">
                 </a>
             </div>
-            <p>&copy; 2024 Afnan Abdullahi | Designed with <span class="heart">❤️</span></p>
+            <p>&copy; 2024 Afnan Abdullahi | Designed with <span class="heart">❤️</span> using Bootstrap</p>
         </footer>
     </main>
 
-    <script src="scripts.js"></script> <!-- JavaScript File -->
+    <script src="scripts.js"></script>
 </body>
 </html>
