--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afnan's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Add in CSS Panel -->
 </head>
 <body>
     <!-- Dynamic Fading Header -->
     <header class="dynamic-header">
         <div class="logo-container">
-            <img src="Profile_Pic.jpg" alt="Profile Picture" class="logo"> <!-- Ensure this path is correct -->
+            <img src="https://via.placeholder.com/40" alt="Profile Picture" class="logo"> <!-- Placeholder image URL -->
             <h1>Afnan's Portfolio</h1>
         </div>
         <p id="greeting" class="greeting-message"></p>
+        <div class="utility-icons">
+            <a href="#contact" title="Contact"><img src="https://via.placeholder.com/20" alt="Contact"></a> <!-- Placeholder icon URL -->
+            <a href="#" title="Search"><img src="https://via.placeholder.com/20" alt="Search"></a> <!-- Placeholder icon URL -->
+        </div>
     </header>
 
     <!-- Vertical Navigation Bar -->
@@ -72,12 +76,40 @@
             <h1>Skills</h1>
             <div class="carousel">
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/combo-chart.png" alt="Data Visualization">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/combo-chart.png" alt="Data Visualization">
                     <p>Data Visualization</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/artificial-intelligence.png" alt="Machine Learning">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/brain.png" alt="Machine Learning">
                     <p>Machine Learning</p>
+                </div>
+                <div class="skill-item">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/source-code.png" alt="Programming">
+                    <p>Programming</p>
+                </div>
+                <div class="skill-item">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/statistics.png" alt="Probability and Statistics">
+                    <p>Probability and Statistics</p>
+                </div>
+                <div class="skill-item">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/neural-network.png" alt="Deep Learning">
+                    <p>Deep Learning</p>
+                </div>
+                <div class="skill-item">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/data-configuration.png" alt="Data Wrangling">
+                    <p>Data Wrangling</p>
+                </div>
+                <div class="skill-item">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/data-sheet.png" alt="Data Manipulation and Analysis">
+                    <p>Data Manipulation and Analysis</p>
+                </div>
+                <div class="skill-item">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/mind-map.png" alt="Curiosity and Lifelong Learning">
+                    <p>Curiosity and Lifelong Learning</p>
+                </div>
+                <div class="skill-item">
+                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/balance-scale.png" alt="Ethical Awareness">
+                    <p>Ethical Awareness</p>
                 </div>
             </div>
             <div class="slide-bar">
@@ -88,10 +120,7 @@
 
         <section id="resume" class="grey-green">
             <h1>Resume</h1>
-            <div class="resume-container">
-                <a href="Afnan_Resume.pdf" download class="download-link">Download Resume</a>
-                <iframe src="Afnan_Resume.pdf" frameborder="0" class="resume-viewer"></iframe>
-            </div>
+            <p>Resume Details...</p>
         </section>
 
         <section id="contact" class="dark-grey">
@@ -128,6 +157,6 @@
         </footer>
     </main>
 
-    <script src="scripts.js"></script>
+    <script src="scripts.js"></script> <!-- Add in JavaScript Panel -->
 </body>
 </html>
