--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afnan's Portfolio</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Add in CSS Panel -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Dynamic Fading Header -->
     <header class="dynamic-header">
         <div class="logo-container">
-            <img src="https://via.placeholder.com/40" alt="Profile Picture" class="logo"> <!-- Placeholder image URL -->
-            <h1>Afnan's Portfolio</h1>
+            <img src="https://via.placeholder.com/40" alt="Profile Picture" class="logo">
+            <h1>Afnan Abdullahi</h1>
         </div>
         <p id="greeting" class="greeting-message"></p>
         <div class="utility-icons">
-            <a href="#contact" title="Contact"><img src="https://via.placeholder.com/20" alt="Contact"></a> <!-- Placeholder icon URL -->
-            <a href="#" title="Search"><img src="https://via.placeholder.com/20" alt="Search"></a> <!-- Placeholder icon URL -->
+            <a href="#contact" title="Contact"><img src="https://via.placeholder.com/20" alt="Contact"></a>
+            <a href="#" title="Search"><img src="https://via.placeholder.com/20" alt="Search"></a>
         </div>
     </header>
 
@@ -76,39 +76,39 @@
             <h1>Skills</h1>
             <div class="carousel">
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/combo-chart.png" alt="Data Visualization">
+                    <img src="https://img.icons8.com/color/96/000000/combo-chart.png" alt="Data Visualization">
                     <p>Data Visualization</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/brain.png" alt="Machine Learning">
+                    <img src="https://img.icons8.com/color/96/000000/artificial-intelligence.png" alt="Machine Learning">
                     <p>Machine Learning</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/source-code.png" alt="Programming">
+                    <img src="https://img.icons8.com/color/96/000000/source-code.png" alt="Programming">
                     <p>Programming</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/statistics.png" alt="Probability and Statistics">
+                    <img src="https://img.icons8.com/color/96/000000/statistics.png" alt="Probability and Statistics">
                     <p>Probability and Statistics</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/neural-network.png" alt="Deep Learning">
+                    <img src="https://img.icons8.com/color/96/000000/neural-network.png" alt="Deep Learning">
                     <p>Deep Learning</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/data-configuration.png" alt="Data Wrangling">
+                    <img src="https://img.icons8.com/color/96/000000/data-configuration.png" alt="Data Wrangling">
                     <p>Data Wrangling</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/data-sheet.png" alt="Data Manipulation and Analysis">
+                    <img src="https://img.icons8.com/color/96/000000/data-sheet.png" alt="Data Manipulation and Analysis">
                     <p>Data Manipulation and Analysis</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/mind-map.png" alt="Curiosity and Lifelong Learning">
+                    <img src="https://img.icons8.com/color/96/000000/learning.png" alt="Curiosity and Lifelong Learning">
                     <p>Curiosity and Lifelong Learning</p>
                 </div>
                 <div class="skill-item">
-                    <img src="https://img.icons8.com/ios-filled/100/4CAF50/balance-scale.png" alt="Ethical Awareness">
+                    <img src="https://img.icons8.com/color/96/000000/scale.png" alt="Ethical Awareness">
                     <p>Ethical Awareness</p>
                 </div>
             </div>
@@ -125,38 +125,10 @@
 
         <section id="contact" class="dark-grey">
             <h1>Contact Me</h1>
-            <div class="contact-container">
-                <form id="contact-form">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <label for="subject">Subject:</label>
-                    <input type="text" id="subject" name="subject" required>
-
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-
-                    <button type="submit" class="submit-btn">Send</button>
-                </form>
-            </div>
+            <p>Contact Details...</p>
         </section>
-
-        <footer class="footer">
-            <div class="social-links">
-                <a href="https://github.com/yourprofile" target="_blank" title="GitHub">
-                    <img src="https://img.icons8.com/ios-glyphs/30/4CAF50/github.png" alt="GitHub">
-                </a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" title="LinkedIn">
-                    <img src="https://img.icons8.com/ios-glyphs/30/4CAF50/linkedin.png" alt="LinkedIn">
-                </a>
-            </div>
-            <p>&copy; 2024 Afnan Abdullahi | Designed with <span class="heart">❤️</span> using Bootstrap</p>
-        </footer>
     </main>
 
-    <script src="scripts.js"></script> <!-- Add in JavaScript Panel -->
+    <script src="scripts.js"></script>
 </body>
 </html>
