--- a/index.html
+++ b/index.html
@@ -74,47 +74,60 @@
 
         <section id="skills" class="skills-carousel">
             <h1>Skills</h1>
-            <div class="carousel">
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/combo-chart.png" alt="Data Visualization">
-                    <p>Data Visualization</p>
+            <div class="carousel-container">
+                <div class="detail-section">
+                    <h2 id="skill-title">Select a Skill</h2>
+                    <p id="skill-description">Details about the selected skill will appear here.</p>
                 </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/artificial-intelligence.png" alt="Machine Learning">
-                    <p>Machine Learning</p>
-                </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/source-code.png" alt="Programming">
-                    <p>Programming</p>
-                </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/statistics.png" alt="Probability and Statistics">
-                    <p>Probability and Statistics</p>
-                </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/neural-network.png" alt="Deep Learning">
-                    <p>Deep Learning</p>
-                </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/data-configuration.png" alt="Data Wrangling">
-                    <p>Data Wrangling</p>
-                </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/data-sheet.png" alt="Data Manipulation and Analysis">
-                    <p>Data Manipulation and Analysis</p>
-                </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/learning.png" alt="Curiosity and Lifelong Learning">
-                    <p>Curiosity and Lifelong Learning</p>
-                </div>
-                <div class="skill-item">
-                    <img src="https://img.icons8.com/color/96/000000/scale.png" alt="Ethical Awareness">
-                    <p>Ethical Awareness</p>
+                <div class="carousel">
+                    <div class="carousel-item" data-title="Data Visualization" data-description="Details for Data Visualization">
+                        <img src="https://img.icons8.com/color/96/000000/combo-chart.png" alt="Data Visualization">
+                        <p>Data Visualization</p>
+                    </div>
+                    <div class="carousel-item" data-title="Machine Learning" data-description="Details for Machine Learning">
+                        <img src="https://img.icons8.com/color/96/000000/artificial-intelligence.png" alt="Machine Learning">
+                        <p>Machine Learning</p>
+                    </div>
+                    <div class="carousel-item" data-title="Programming" data-description="Details for Programming">
+                        <img src="https://img.icons8.com/color/96/000000/source-code.png" alt="Programming">
+                        <p>Programming</p>
+                    </div>
+                    <div class="carousel-item" data-title="Probability and Statistics" data-description="Details for Probability and Statistics">
+                        <img src="https://img.icons8.com/color/96/000000/statistics.png" alt="Probability and Statistics">
+                        <p>Probability and Statistics</p>
+                    </div>
+                    <div class="carousel-item" data-title="Deep Learning" data-description="Details for Deep Learning">
+                        <img src="https://img.icons8.com/color/96/000000/neural-network.png" alt="Deep Learning">
+                        <p>Deep Learning</p>
+                    </div>
+                    <div class="carousel-item" data-title="Data Wrangling" data-description="Details for Data Wrangling">
+                        <img src="https://img.icons8.com/color/96/000000/data-configuration.png" alt="Data Wrangling">
+                        <p>Data Wrangling</p>
+                    </div>
+                    <div class="carousel-item" data-title="Data Manipulation and Analysis" data-description="Details for Data Manipulation and Analysis">
+                        <img src="https://img.icons8.com/color/96/000000/data-sheet.png" alt="Data Manipulation and Analysis">
+                        <p>Data Manipulation and Analysis</p>
+                    </div>
+                    <div class="carousel-item" data-title="Curiosity and Lifelong Learning" data-description="Details for Curiosity and Lifelong Learning">
+                        <img src="https://img.icons8.com/color/96/000000/learning.png" alt="Curiosity and Lifelong Learning">
+                        <p>Curiosity and Lifelong Learning</p>
+                    </div>
+                    <div class="carousel-item" data-title="Ethical Awareness" data-description="Details for Ethical Awareness">
+                        <img src="https://img.icons8.com/color/96/000000/scale.png" alt="Ethical Awareness">
+                        <p>Ethical Awareness</p>
+                    </div>
                 </div>
             </div>
             <div class="slide-bar">
-                <button class="prev-btn">‹</button>
-                <button class="next-btn">›</button>
+                <div class="slide-indicator" data-index="0"></div>
+                <div class="slide-indicator" data-index="1"></div>
+                <div class="slide-indicator" data-index="2"></div>
+                <div class="slide-indicator" data-index="3"></div>
+                <div class="slide-indicator" data-index="4"></div>
+                <div class="slide-indicator" data-index="5"></div>
+                <div class="slide-indicator" data-index="6"></div>
+                <div class="slide-indicator" data-index="7"></div>
+                <div class="slide-indicator" data-index="8"></div>
             </div>
         </section>
 
