--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afnan's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- SplideJS CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.9/dist/css/splide.min.css">
 </head>
 <body>
     <!-- Dynamic Fading Header -->
@@ -74,60 +76,47 @@
 
         <section id="skills" class="skills-carousel">
             <h1>Skills</h1>
-            <div class="carousel-container">
-                <div class="detail-section">
-                    <h2 id="skill-title">Select a Skill</h2>
-                    <p id="skill-description">Details about the selected skill will appear here.</p>
+            <div id="splide" class="splide">
+                <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/combo-chart.png" alt="Data Visualization">
+                            <p>Data Visualization</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/artificial-intelligence.png" alt="Machine Learning">
+                            <p>Machine Learning</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/source-code.png" alt="Programming">
+                            <p>Programming</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/statistics.png" alt="Probability and Statistics">
+                            <p>Probability and Statistics</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/neural-network.png" alt="Deep Learning">
+                            <p>Deep Learning</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/data-configuration.png" alt="Data Wrangling">
+                            <p>Data Wrangling</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/data-sheet.png" alt="Data Manipulation and Analysis">
+                            <p>Data Manipulation and Analysis</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/learning.png" alt="Curiosity and Lifelong Learning">
+                            <p>Curiosity and Lifelong Learning</p>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="https://img.icons8.com/color/96/000000/scale.png" alt="Ethical Awareness">
+                            <p>Ethical Awareness</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="carousel">
-                    <div class="carousel-item" data-title="Data Visualization" data-description="Details for Data Visualization">
-                        <img src="https://img.icons8.com/color/96/000000/combo-chart.png" alt="Data Visualization">
-                        <p>Data Visualization</p>
-                    </div>
-                    <div class="carousel-item" data-title="Machine Learning" data-description="Details for Machine Learning">
-                        <img src="https://img.icons8.com/color/96/000000/artificial-intelligence.png" alt="Machine Learning">
-                        <p>Machine Learning</p>
-                    </div>
-                    <div class="carousel-item" data-title="Programming" data-description="Details for Programming">
-                        <img src="https://img.icons8.com/color/96/000000/source-code.png" alt="Programming">
-                        <p>Programming</p>
-                    </div>
-                    <div class="carousel-item" data-title="Probability and Statistics" data-description="Details for Probability and Statistics">
-                        <img src="https://img.icons8.com/color/96/000000/statistics.png" alt="Probability and Statistics">
-                        <p>Probability and Statistics</p>
-                    </div>
-                    <div class="carousel-item" data-title="Deep Learning" data-description="Details for Deep Learning">
-                        <img src="https://img.icons8.com/color/96/000000/neural-network.png" alt="Deep Learning">
-                        <p>Deep Learning</p>
-                    </div>
-                    <div class="carousel-item" data-title="Data Wrangling" data-description="Details for Data Wrangling">
-                        <img src="https://img.icons8.com/color/96/000000/data-configuration.png" alt="Data Wrangling">
-                        <p>Data Wrangling</p>
-                    </div>
-                    <div class="carousel-item" data-title="Data Manipulation and Analysis" data-description="Details for Data Manipulation and Analysis">
-                        <img src="https://img.icons8.com/color/96/000000/data-sheet.png" alt="Data Manipulation and Analysis">
-                        <p>Data Manipulation and Analysis</p>
-                    </div>
-                    <div class="carousel-item" data-title="Curiosity and Lifelong Learning" data-description="Details for Curiosity and Lifelong Learning">
-                        <img src="https://img.icons8.com/color/96/000000/learning.png" alt="Curiosity and Lifelong Learning">
-                        <p>Curiosity and Lifelong Learning</p>
-                    </div>
-                    <div class="carousel-item" data-title="Ethical Awareness" data-description="Details for Ethical Awareness">
-                        <img src="https://img.icons8.com/color/96/000000/scale.png" alt="Ethical Awareness">
-                        <p>Ethical Awareness</p>
-                    </div>
-                </div>
-            </div>
-            <div class="slide-bar">
-                <div class="slide-indicator" data-index="0"></div>
-                <div class="slide-indicator" data-index="1"></div>
-                <div class="slide-indicator" data-index="2"></div>
-                <div class="slide-indicator" data-index="3"></div>
-                <div class="slide-indicator" data-index="4"></div>
-                <div class="slide-indicator" data-index="5"></div>
-                <div class="slide-indicator" data-index="6"></div>
-                <div class="slide-indicator" data-index="7"></div>
-                <div class="slide-indicator" data-index="8"></div>
             </div>
         </section>
 
@@ -142,6 +131,8 @@
         </section>
     </main>
 
+    <!-- SplideJS JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.9/dist/js/splide.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
